# job-application-assistant

./: .gitignore  README.md  pyproject.toml
docs/: toteutussuunnitelma.md
src/job_application_assistant/: __init__.py  __main__.py  cli.py  io.py  preprocess.py
tests/: test_cli.py  test_io.py  test_preprocess.py
tools/: generate_plan_pdf.py
