[project]
name = "job-application-assistant"
version = "0.1.0"
description = "Local Python tool for aligning CVs with job postings"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
job-application-assistant = "job_application_assistant.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
